// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - default - value[0] - default 1`] = `
<div
  id="default"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - default - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.title - value[0] - default 1`] = `
<div
  id="properties.title"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.title - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties.title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html="Modal title"
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties.title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html="Modal title"
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: bodyStyle: border: 10px solid blue - value[0] - default 1`] = `
<div
  id="properties: bodyStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: bodyStyle: border: 10px solid blue - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": Object {
        "border": "10px solid blue",
      },
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: bodyStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": Object {
        "border": "10px solid blue",
      },
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: bodyStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: cancelText: Text of the Cancel button - value[0] - default 1`] = `
<div
  id="properties: cancelText: Text of the Cancel button"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: cancelText: Text of the Cancel button - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Text of the Cancel button",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: cancelText: Text of the Cancel button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Text of the Cancel button",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: cancelText: Text of the Cancel button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: centered: true - value[0] - default 1`] = `
<div
  id="properties: centered: true"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: centered: true - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": true,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: centered: true_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": true,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: centered: true_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: closable: false - value[0] - default 1`] = `
<div
  id="properties: closable: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: closable: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "confirmLoading": undefined,
      "id": "properties: closable: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "confirmLoading": undefined,
      "id": "properties: closable: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: footer: false - value[0] - default 1`] = `
<div
  id="properties: footer: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: footer: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "footer": null,
      "id": "properties: footer: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "footer": null,
      "id": "properties: footer: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: mask: false - value[0] - default 1`] = `
<div
  id="properties: mask: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: mask: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: mask: false_modal",
      "mask": false,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: mask: false_modal",
      "mask": false,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: maskClosable: false - value[0] - default 1`] = `
<div
  id="properties: maskClosable: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: maskClosable: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskClosable: false_modal",
      "mask": true,
      "maskClosable": false,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskClosable: false_modal",
      "mask": true,
      "maskClosable": false,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: maskStyle: border: 10px solid blue - value[0] - default 1`] = `
<div
  id="properties: maskStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: maskStyle: border: 10px solid blue - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": Object {
        "border": "10px solid blue",
      },
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": Object {
        "border": "10px solid blue",
      },
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: okText: Text of the OK button - value[0] - default 1`] = `
<div
  id="properties: okText: Text of the OK button"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: okText: Text of the OK button - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: okText: Text of the OK button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Text of the OK button",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: okText: Text of the OK button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Text of the OK button",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: width: 350px - 520px is default - value[0] - default 1`] = `
<div
  id="properties: width: 350px - 520px is default"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: width: 350px - 520px is default - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: width: 350px - 520px is default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": 350,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: width: 350px - 520px is default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": 350,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: wrapperStyle: border: 10px solid blue - value[0] - default 1`] = `
<div
  id="properties: wrapperStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: wrapperStyle: border: 10px solid blue - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: wrapperStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-hzhgt3",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: wrapperStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-hzhgt3",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: zIndex: 1200 - 1000 is the default - value[0] - default 1`] = `
<div
  id="properties: zIndex: 1200 - 1000 is the default"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties: zIndex: 1200 - 1000 is the default - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: zIndex: 1200 - 1000 is the default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": 1200,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: zIndex: 1200 - 1000 is the default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": 1200,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - with html in title - value[0] - default 1`] = `
<div
  id="with html in title"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - with html in title - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "with html in title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html=<div style="color:green;">
  Modal Html Title
</div>
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "with html in title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html=<div style="color:green;">
  Modal Html Title
</div>
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - default - value[0] - default 1`] = `
<div
  id="default"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - default - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.title - value[0] - default 1`] = `
<div
  id="properties.title"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.title - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties.title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html="Modal title"
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties.title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html="Modal title"
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: bodyStyle: border: 10px solid blue - value[0] - default 1`] = `
<div
  id="properties: bodyStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: bodyStyle: border: 10px solid blue - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": Object {
        "border": "10px solid blue",
      },
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: bodyStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": Object {
        "border": "10px solid blue",
      },
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: bodyStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: cancelText: Text of the Cancel button - value[0] - default 1`] = `
<div
  id="properties: cancelText: Text of the Cancel button"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: cancelText: Text of the Cancel button - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Text of the Cancel button",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: cancelText: Text of the Cancel button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Text of the Cancel button",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: cancelText: Text of the Cancel button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: centered: true - value[0] - default 1`] = `
<div
  id="properties: centered: true"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: centered: true - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": true,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: centered: true_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": true,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: centered: true_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: closable: false - value[0] - default 1`] = `
<div
  id="properties: closable: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: closable: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "confirmLoading": undefined,
      "id": "properties: closable: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "confirmLoading": undefined,
      "id": "properties: closable: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: footer: false - value[0] - default 1`] = `
<div
  id="properties: footer: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: footer: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "footer": null,
      "id": "properties: footer: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "footer": null,
      "id": "properties: footer: false_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: mask: false - value[0] - default 1`] = `
<div
  id="properties: mask: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: mask: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: mask: false_modal",
      "mask": false,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: mask: false_modal",
      "mask": false,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: maskClosable: false - value[0] - default 1`] = `
<div
  id="properties: maskClosable: false"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: maskClosable: false - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskClosable: false_modal",
      "mask": true,
      "maskClosable": false,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskClosable: false_modal",
      "mask": true,
      "maskClosable": false,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: maskStyle: border: 10px solid blue - value[0] - default 1`] = `
<div
  id="properties: maskStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: maskStyle: border: 10px solid blue - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": Object {
        "border": "10px solid blue",
      },
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: maskStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": Object {
        "border": "10px solid blue",
      },
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: okText: Text of the OK button - value[0] - default 1`] = `
<div
  id="properties: okText: Text of the OK button"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: okText: Text of the OK button - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: okText: Text of the OK button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Text of the OK button",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: okText: Text of the OK button_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Text of the OK button",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: width: 350px - 520px is default - value[0] - default 1`] = `
<div
  id="properties: width: 350px - 520px is default"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: width: 350px - 520px is default - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: width: 350px - 520px is default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": 350,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: width: 350px - 520px is default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": 350,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: wrapperStyle: border: 10px solid blue - value[0] - default 1`] = `
<div
  id="properties: wrapperStyle: border: 10px solid blue"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: wrapperStyle: border: 10px solid blue - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: wrapperStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-hzhgt3",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: wrapperStyle: border: 10px solid blue_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-hzhgt3",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: zIndex: 1200 - 1000 is the default - value[0] - default 1`] = `
<div
  id="properties: zIndex: 1200 - 1000 is the default"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties: zIndex: 1200 - 1000 is the default - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: zIndex: 1200 - 1000 is the default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": 1200,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "properties: zIndex: 1200 - 1000 is the default_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": undefined,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": 1200,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - with html in title - value[0] - default 1`] = `
<div
  id="with html in title"
>
  mocked
</div>
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - with html in title - value[0] - default 2`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "with html in title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html=<div style="color:green;">
  Modal Html Title
</div>
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": false,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "afterClose": [Function],
      "bodyStyle": undefined,
      "cancelButtonProps": undefined,
      "cancelText": "Cancel",
      "centered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": true,
      "confirmLoading": undefined,
      "id": "with html in title_modal",
      "mask": true,
      "maskClosable": true,
      "maskStyle": undefined,
      "okButtonProps": undefined,
      "okText": "Ok",
      "okType": "primary",
      "onCancel": [Function],
      "onOk": [Function],
      "title": <HtmlComponent
        html=<div style="color:green;">
  Modal Html Title
</div>
        methods={
          Object {
            "makeCssClass": [Function],
            "moveItemDown": [MockFunction],
            "moveItemUp": [MockFunction],
            "pushItem": [MockFunction],
            "registerEvent": [MockFunction],
            "registerMethod": [Function],
            "removeItem": [MockFunction],
            "setOpen": [Function],
            "setValue": [MockFunction],
            "toggleOpen": [Function],
            "triggerEvent": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "name": "onOpen",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "unshiftItem": [MockFunction],
          }
        }
      />,
      "visible": true,
      "width": undefined,
      "wrapClassName": "css-0",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema properties: bodyStyle: border: 10px solid blue 1`] = `true`;

exports[`Test Schema properties: bodyStyle: border: 10px solid blue 2`] = `null`;

exports[`Test Schema properties: cancelText: Text of the Cancel button 1`] = `true`;

exports[`Test Schema properties: cancelText: Text of the Cancel button 2`] = `null`;

exports[`Test Schema properties: centered: true 1`] = `true`;

exports[`Test Schema properties: centered: true 2`] = `null`;

exports[`Test Schema properties: closable: false 1`] = `true`;

exports[`Test Schema properties: closable: false 2`] = `null`;

exports[`Test Schema properties: footer: false 1`] = `true`;

exports[`Test Schema properties: footer: false 2`] = `null`;

exports[`Test Schema properties: mask: false 1`] = `true`;

exports[`Test Schema properties: mask: false 2`] = `null`;

exports[`Test Schema properties: maskClosable: false 1`] = `true`;

exports[`Test Schema properties: maskClosable: false 2`] = `null`;

exports[`Test Schema properties: maskStyle: border: 10px solid blue 1`] = `true`;

exports[`Test Schema properties: maskStyle: border: 10px solid blue 2`] = `null`;

exports[`Test Schema properties: okText: Text of the OK button 1`] = `true`;

exports[`Test Schema properties: okText: Text of the OK button 2`] = `null`;

exports[`Test Schema properties: width: 350px - 520px is default 1`] = `true`;

exports[`Test Schema properties: width: 350px - 520px is default 2`] = `null`;

exports[`Test Schema properties: wrapperStyle: border: 10px solid blue 1`] = `true`;

exports[`Test Schema properties: wrapperStyle: border: 10px solid blue 2`] = `null`;

exports[`Test Schema properties: zIndex: 1200 - 1000 is the default 1`] = `true`;

exports[`Test Schema properties: zIndex: 1200 - 1000 is the default 2`] = `null`;

exports[`Test Schema with html in title 1`] = `true`;

exports[`Test Schema with html in title 2`] = `null`;
